force-app/main/default/objects/Sign_Off_History__c/Sign_Off_History__c.object-meta.xml
<CustomObject>
    <description>This object is used to store Investment Schedule Sign off details</description>
    <label>Sign Off History</label>
    <nameField>
        <displayFormat>SH{000000}</displayFormat>
        <label>Sign Off History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sign Off History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>