force-app/main/default/objects/Sign_Off_History__c/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <description>This is used to store associated Investment Schedule.</description>
    <label>Investment Schedule</label>
    <referenceTo>Business_Case__c</referenceTo>
    <relationshipName>Sign_Off_Historys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>