force-app/main/default/objects/Sign_Off_History__c/fields/Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed__c</fullName>
    <description>Stores Date Signed value of associated Investment Schedule.</description>
    <label>Date Signed</label>
    <type>Date</type>
</CustomField>