force-app/main/default/objects/Sign_Off_History__c/fields/Document_Link_1__c.field-meta.xml
<CustomField>
    <fullName>Document_Link_1__c</fullName>
    <description>Stores Document Link 1 of associated Investment Schedule</description>
    <label>Document Link 1</label>
    <type>Url</type>
</CustomField>