force-app/main/default/objects/Sign_Off_History__c/fields/Document_Link_2__c.field-meta.xml
<CustomField>
    <fullName>Document_Link_2__c</fullName>
    <description>Stores Document Link 2 of associated Investment Schedule</description>
    <label>Document Link 2</label>
    <type>Url</type>
</CustomField>