force-app/main/default/objects/Sign_Off_History__c/fields/External_Signatory__c.field-meta.xml
<CustomField>
    <fullName>External_Signatory__c</fullName>
    <description>Stores External Signatory field of Investment Schedule</description>
    <label>External Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>